--- a/paper/DeadlockFreedom.tex
+++ b/paper/DeadlockFreedom.tex
@@ -3190,7 +3190,7 @@ applying structural pre-congruence to rewrite it into a thread.
 \AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
 \AgdaSymbol{(\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{r-poly}\AgdaSpace{}%
+\AgdaInductiveConstructor{r-ex}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{r}\AgdaSymbol{)}\<%
