--- a/paper/Reduction.lagda.tex
+++ b/paper/Reduction.lagda.tex
@@ -39,7 +39,6 @@ Just like structural precongruence, reduction is formalized as a binary relation
 between processes that are well typed in the very same typing context. Thus, the
 definition of reduction embeds the subject reduction result.
 
-\begin{AgdaAlign}
 \begin{code}
 data _↝_ {Γ} : Process Γ → Process Γ → Set where
 \end{code}
@@ -47,30 +46,31 @@ data _↝_ {Γ} : Process Γ → Process Γ → Set where
 There is a constructor for each of the reduction rules in \Cref{tab:semantics}.
 Let us comment a representative selection of them.
 
-The constructor \AgdaInductiveConstructor{r-link} models \RLink. 
+The constructor \AgdaInductiveConstructor{r-link} models the reduction
+$\Cut[A]\x{\Link\x\y}{P} \red P\subst\y\x$ called \RLink in
+\Cref{tab:semantics}:
 
 \begin{code}
-  r-link      : ∀{Δ A P} (p : Γ ∋ dual A ⊳ Δ) →
+  r-link      : ∀{Δ A P} (p : Γ ≃ [ dual A ] + Δ) →
                 cut {A} p (link (< > •)) P ↝ ↭process (↭concat p) P
 \end{code}
 
-For generality, the rules quantifies over two proofs $d$ and $e$ of the same
-duality relation between $A$ and $B$. Even though such proofs would necessarily
-be the same, distinguishing them saves us a proof that they are equal whenever
-we want to apply this reduction. 
-%
-Also note that the splitting
-$(\AgdaInductiveConstructor{split-l}~(\AgdaInductiveConstructor{split-r}~\AgdaInductiveConstructor{split-e}))$
+The splitting $p$ indicates that $y$ (of type $\dual{A}$) occurs on the left
+sub-process of the cut (that is the link $\Link\x\y$) and the splitting
+$(\AgdaInductiveConstructor{<}~\AgdaInductiveConstructor{>}~\AgdaInductiveConstructor{•})$
 to which \AgdaInductiveConstructor{link} is applied is structured consistently
-with \Cref{tab:semantics}, where the link $\Link\x\y$ being reduced is oriented
-so that the restricted channel $x$ occurs on the left. 
+with the syntax of the link $\Link\x\y$ being reduced, which is oriented so that
+the restricted channel $x$ occurs on the left. 
 %
-Finally, the process $P\subst\y\x$ resulting from the reduction is subject to a
-channel substitution in \Cref{tab:semantics}. In the Agda representation of
-processes with nameless channels, the same effect is achieved by the permutation
-$\AgdaFunction{\#cons}~p$, which ``renames'' (the position of) the free
-occurrence of $x$ within $P$ with (the position of) $y$ encoded in the splitting
-$p$.
+The process $P$ has type
+$\AgdaDatatype{Process}~(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷}~\ContextD)$,
+and turns into $P\subst\y\x$ after the reduction. The type
+$\AgdaFunction{dual}~A$ of $x$ in $P$ is the first in the typing context,
+indicating that it is the newest channel that $P$ is aware of. However, after
+the reduction, $x$ is replaced by $y$ which is found \emph{somewhere} within
+$\Context$. The exact location of $y$ in $\ContextC$ is found in the splitting
+$p$. We ``rename'' $x$ into $y$ within $P$ using the permutation
+$\AgdaFunction{↭concat}~p$.
 
 The constructor \AgdaInductiveConstructor{r-close} models \RClose:
 
@@ -82,22 +82,22 @@ The constructor \AgdaInductiveConstructor{r-close} models \RClose:
 While the \AgdaInductiveConstructor{close} constructor implicitly refers to the
 only free channel occurring in a process of the form $\Close\x$, the
 \AgdaInductiveConstructor{wait} constructor uses a splitting proof of the form
-$(\AgdaInductiveConstructor{split-l}~q_0)$ to be sure that the referenced
-channel is also the restricted one, and therefore matches the one of the
+$(\AgdaInductiveConstructor{<}~q_0)$ to be sure that the referenced channel is
+also the restricted one, and therefore matches the one of the
 \AgdaInductiveConstructor{close} process.
-%
-Just like \AgdaInductiveConstructor{r-link} quantifies over multiple proofs for
-the same duality relation, also \AgdaInductiveConstructor{r-close} (and several
-other reduction constructors) quantifies over $p_0$ and $q_0$ which both prove
-the splitting $\Context \simeq \AgdaInductiveConstructor{[]} + \Context$. Since
-the left context is empty, these splittings must be equal and made of a sequence
-of \AgdaInductiveConstructor{split-r} applications followed by
-\AgdaInductiveConstructor{split-e}, but it is easier to quantify them separately
-so that we do not have to worry about proving their equality whenever we wish to
+
+Note that \AgdaInductiveConstructor{r-close} (and several other reduction
+constructors) quantifies over $p_0$ and $q_0$ which both prove the splitting
+$\Context \simeq \AgdaInductiveConstructor{[]} + \Context$. Since the left
+context is empty, these splittings must be equal and made of a sequence of
+\AgdaInductiveConstructor{>} applications followed by
+\AgdaInductiveConstructor{•}. In general, Agda will not be able to ``see'' that
+they are definitionally equal, hence it is easier to quantify them separately so
+that we do not have to worry about proving their equality whenever we wish to
 apply this reduction.
 
-The constructor \AgdaInductiveConstructor{r-select-l} models \RSelect when the
-selected tag is $\InTag_1$, that is \AgdaInductiveConstructor{true} in Agda:
+The constructor \AgdaInductiveConstructor{r-left} models \RSelect when the
+selected tag is $\InTag_1$:
 
 \begin{code}
   r-left      : ∀{Γ₁ Γ₂ A B P Q R}
@@ -106,11 +106,11 @@ selected tag is $\InTag_1$, that is \AgdaInductiveConstructor{true} in Agda:
                               (case (< q₀) Q R) ↝ cut p P Q
 \end{code}
 
-There is not much more to note here (and in other omitted reduction rules),
-except again for the multiple quantifications over the trivial splittings
-$\Context_i \simeq \AgdaInductiveConstructor{[]} + \Context_i$ and the use of
-\AgdaInductiveConstructor{split-l} to make sure that the channel referred to by
-\AgdaInductiveConstructor{select} and \AgdaInductiveConstructor{case} is indeed
+There is not much more to note here except again for the multiple
+quantifications over the trivial splittings $\Context_i \simeq
+\AgdaInductiveConstructor{[]} + \Context_i$ and the use of
+\AgdaInductiveConstructor{<} to make sure that the channel referred to by
+\AgdaInductiveConstructor{left} and \AgdaInductiveConstructor{case} is indeed
 the one restricted by the cut.
 
 \begin{code}[hide]
@@ -137,9 +137,30 @@ the one restricted by the cut.
                     contraction un p
                       (cut ++≃+ (server (< p₀) un P)
                       (cut (> p) (server (< p₀) un P) Q))
-  r-poly       : ∀{A B Γ₁ Γ₂ P F} (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) ->
+\end{code}
+
+The remaining constructors that describe the base reductions follow a similar
+pattern. We only glance at \RExists since it involves a non-trivial rewriting of
+types:
+
+\begin{code}
+  r-ex         : ∀{A B Γ₁ Γ₂ P F}
+                 (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
                  cut {`∃ A} p (ex {_} {B} (< p₀) P) (all (< q₀) F) ↝ cut p P (F B)
 \end{code}
+
+Recalling the definitions of \AgdaInductiveConstructor{ex} and
+\AgdaInductiveConstructor{all} from \Cref{sec:process-agda}, we note that $P$
+has type
+$\AgdaDatatype{Process}~(\AgdaFunction{subst}~[~B~/\_]~A~\AgdaInductiveConstructor{∷}~\Context_1)$
+and $(F~B)$ is a process of type
+$\AgdaDatatype{Process}~(\AgdaFunction{subst}~[~B~/\_]~(\AgdaFunction{dual}~A)~\AgdaInductiveConstructor{∷}~\Context_2)$.
+In order for these two process to be composable in a cut, it must be the case
+that $\AgdaFunction{subst}~[~B~/\_]~(\AgdaFunction{dual}~A) \equiv
+\AgdaFunction{dual}~(\AgdaFunction{subst}~[~B~/\_]~A)$, which was proved in
+\Cref{sec:type-agda} under the name \AgdaFunction{dual-subst}. Thanks to the
+implicit rewriting rule, we do not have to rewrite the index in the type of
+$(F~B)$, which is silently accepted as is.
 
 Reduction is closed under cuts and by structural pre-congruence as per \RCut and
 \RCong. The corresponding constructors that model these features are shown
@@ -150,4 +171,3 @@ below:
                  P ↝ Q → cut {A} q P R ↝ cut q Q R
   r-cong       : ∀{P R Q} → P ⊒ R → R ↝ Q → P ↝ Q
 \end{code}
-\end{AgdaAlign}
