--- a/paper/Reduction.tex
+++ b/paper/Reduction.tex
@@ -846,12 +846,14 @@ the one restricted by the cut.
 \end{code}
 
 The remaining constructors that describe the base reductions follow a similar
-pattern. We only glance at \RExists since it involves a non-trivial rewriting of
-types:
+pattern, noting that the implementation of \RWeaken and \RContract makes use of
+auxiliary functions that respectively weaken and contract the typing context of
+the resulting process as shown in \Cref{tab:semantics}. It is worth glancing at
+\RExists since it involves a non-trivial rewriting of types:
 
 \begin{code}%
 %
-\>[2]\AgdaInductiveConstructor{r-ex}%
+\>[2]\AgdaInductiveConstructor{r-exists}%
 \>[15]\AgdaSymbol{:}%
 \>[603I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
