--- a/paper/related.tex
+++ b/paper/related.tex
@@ -1,3 +1,8 @@
 \section{Related Work}
 \label{sec:related}
 
+come sono stati misurati
+
+eliminati commenti
+eliminati esempi
+squeezed spazi (in generale sono significativi)
